# wq.build

./: .travis.yml  LICENSE  README.md  __init__.py  decorators.py  info.py  pyproject.toml  runtests.sh  setup.py
.github/workflows/: test.yml
commands/: __init__.py  collect.py  icons.py  info.py  serviceworker.py  setversion.py
management/commands/: _base.py  deploy.py  setversion.py
tests/: test_import.py
tests/commands/: test_commands.sh
tests/commands/serviceworker/: wq.yml
tests/commands/serviceworker/expected/: service-worker.js
